--- a/Modding/android/app/src/main/AndroidManifest.xml
+++ b/Modding/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <application
         android:label="Sen: Environment"
         android:name="${applicationName}"
+        android:largeHeap="true"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
