--- a/Modding/pubspec.yaml
+++ b/Modding/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
     local_notifier: ^0.1.6
     flutter_launcher_icons: ^0.14.1
     file_selector: ^1.0.3
+    url_launcher: ^6.3.1
 dev_dependencies:
     flutter_test:
         sdk: flutter
@@ -47,6 +48,7 @@ flutter:
     assets:
         - assets/
         - assets/images/
+        - assets/images/translator/
     fonts:
         - family: GoogleSans
           fonts:
