--- a/Modding/pubspec.yaml
+++ b/Modding/pubspec.yaml
@@ -1,4 +1,4 @@
-name: modding
+name: sen
 description: "Sen: Environment"
 publish_to: "none"
 version: 1.0.0+1
@@ -9,7 +9,6 @@ dependencies:
         sdk: flutter
     cupertino_icons: ^1.0.6
     provider: ^6.1.2
-    file_picker: ^8.0.6
     delightful_toast: ^1.1.0
     google_fonts: ^6.2.1
     shared_preferences: ^2.3.1
@@ -18,7 +17,7 @@ dependencies:
     material_symbols_icons: ^4.2777.1
     intl: any
     path: ^1.9.0
-    window_manager: ^0.3.9
+    window_manager: ^0.4.3
     desktop_drop: ^0.5.0
     image: ^4.2.0
     dynamic_color: ^1.7.0
@@ -33,7 +32,7 @@ dependencies:
 dev_dependencies:
     flutter_test:
         sdk: flutter
-    flutter_lints: ^3.0.0
+    flutter_lints: ^5.0.0
 flutter_launcher_icons:
     android: true
     ios: true
