--- a/Modding/pubspec.yaml
+++ b/Modding/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
     file_selector: ^1.0.3
     url_launcher: ^6.3.1
     flutter_riverpod: ^2.6.1
+    path_provider: ^2.1.5
 dev_dependencies:
     flutter_test:
         sdk: flutter
