--- a/Kernel/kernel/CMakeLists.txt
+++ b/Kernel/kernel/CMakeLists.txt
@@ -178,11 +178,6 @@ add_library(
 	./interface/interface.cpp
 )
 
-
-if (MSVC)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE QUICKJS_BY_C_SMILE=1)
-endif()
-
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/dependencies/fmt)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
@@ -257,6 +252,11 @@ target_link_libraries(
 	tsl
 )
 
+if (WIN32)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE "NOMINMAX")
+    target_compile_definitions(${PROJECT_NAME} PRIVATE "_WINSOCKAPI_")
+    target_compile_definitions(${PROJECT_NAME} PRIVATE "_UCRT_NOISY_NAN")
+endif()
 
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
