--- a/Shell/deps/tinyfiledialogs/CMakeLists.txt
+++ b/Shell/deps/tinyfiledialogs/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(
 	tinyfiledialogs
-	VERSION 3.15.1
+	VERSION 3.17.5
 	HOMEPAGE_URL https://sourceforge.net/projects/tinyfiledialogs/
 	LANGUAGES C
 )
@@ -11,7 +11,6 @@ add_library(
 	./tinyfiledialogs.c
 )
 
-# UTF8 Support
 if(MSVC)
   add_compile_options(/utf-8)
   add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
@@ -20,4 +19,4 @@ else()
   add_compile_options(-finput-charset=UTF-8)
 endif()
 
-set_target_properties(tinyfiledialogs PROPERTIES POSITION_INDEPENDENT_CODE ON)
+set_target_properties(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
