--- a/Modding/pubspec.yaml
+++ b/Modding/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sen
 description: "Sen: Environment"
 publish_to: "none"
-version: 1.0.0+1
+version: 2.0.0
 environment:
     sdk: ">=3.4.3 <4.0.0"
 dependencies:
@@ -23,7 +23,7 @@ dependencies:
     flutter_localizations:
         sdk: flutter
     page_transition: ^2.1.0
-    flutter_local_notifications: ^17.2.3
+    flutter_local_notifications: ^18.0.0
     local_notifier: ^0.1.6
     flutter_launcher_icons: ^0.14.1
     file_selector: ^1.0.3
