--- a/Modding/pubspec.yaml
+++ b/Modding/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
     url_launcher: ^6.3.1
     flutter_riverpod: ^2.6.1
     path_provider: ^2.1.5
+    flutter_dotenv: ^5.2.1
+    google_generative_ai: ^0.4.6
+    shimmer: ^3.0.0
 dev_dependencies:
     flutter_test:
         sdk: flutter
@@ -49,6 +52,7 @@ flutter:
         - assets/
         - assets/images/
         - assets/images/translator/
+        - .env
     fonts:
         - family: GoogleSans
           fonts:
