--- a/Modding/windows/runner/Runner.rc
+++ b/Modding/windows/runner/Runner.rc
@@ -90,11 +90,11 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.haruma.sen.modding" "\0"
-            VALUE "FileDescription", "modding" "\0"
+            VALUE "FileDescription", "Sen" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "modding" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.haruma.sen.modding. All rights reserved." "\0"
-            VALUE "OriginalFilename", "modding.exe" "\0"
+            VALUE "InternalName", "Sen" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 Haruma. All rights reserved." "\0"
+            VALUE "OriginalFilename", "Sen.exe" "\0"
             VALUE "ProductName", "Sen: Environment" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
