--- a/Modding/android/app/build.gradle
+++ b/Modding/android/app/build.gradle
@@ -32,7 +32,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "com.haruma.sen.environment"
-    compileSdk = flutter.compileSdkVersion
+    compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
