--- a/Modding/pubspec.yaml
+++ b/Modding/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
     dio: ^5.7.0
     archive: ^4.0.2
     windows_taskbar: ^1.1.2
+    loading_animation_widget: ^1.3.0
 dev_dependencies:
     flutter_test:
         sdk: flutter
