--- a/Modding/pubspec.yaml
+++ b/Modding/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
     archive: ^4.0.2
     windows_taskbar: ^1.1.2
     loading_animation_widget: ^1.3.0
+    equatable: ^2.0.7
+    flutter_bloc: ^8.1.6
+    bloc: ^8.1.4
+    meta: ^1.15.0
 dev_dependencies:
     flutter_test:
         sdk: flutter
@@ -73,7 +77,6 @@ flutter:
         - assets/icon/
         - assets/images/
         - assets/images/translator/
-        - .env
     fonts:
         - family: GoogleSans
           fonts:
