--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -98,7 +98,7 @@ set(CMAKE_C_VISIBILITY_PRESET hidden)
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 
 # Pos Independent
-set(CMAKE_POSITION_INDEPENDENT_CODE true)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 if (MSVC)
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi")
