--- a/Launcher/CMakeLists.txt
+++ b/Launcher/CMakeLists.txt
@@ -1,11 +1,12 @@
-﻿cmake_minimum_required (VERSION 3.10)
+﻿cmake_minimum_required(VERSION 3.22)
 
-if (POLICY CMP0141)
-  cmake_policy(SET CMP0141 NEW)
-  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
+project(Launcher LANGUAGES CXX)
+
+set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Build can only be Release" FORCE)
+
+if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
+    add_compile_options(-std=c++23 -fmodules-ts -fPIC -fvisibility=hidden)
 endif()
-
-project (Launcher)
 
 if(MSVC)
     add_compile_options(/utf-8)
@@ -13,46 +14,93 @@ else()
     add_compile_options(-finput-charset=UTF-8 -fexec-charset=UTF-8)
 endif()
 
-add_definitions(-w)
+file(GLOB_RECURSE HEADER_FILES "./**.hpp")
+file(GLOB_RECURSE SOURCE_FILES "./**.cppm" "./**.cpp")
 
-if (WIN32)
-  add_compile_options(/w)
-endif()
-
-add_executable (
+add_executable(
     ${PROJECT_NAME} 
-    ./library/standard.cppm
-    ./library/string.cppm
-    ./library/version.cppm
-    ./library/macro.hpp
-    ./library/platform/windows.cppm
-    ./library/platform/unix.cppm
-    ./launcher.cppm
     $<$<PLATFORM_ID:Windows>:./launcher.rc>
+    ${HEADER_FILES} 
+    ${SOURCE_FILES}
 )
-
-if (WIN32)
-  set(MY_MANIFEST_FILE ./resource/windows/application.manifest)
-  set(CMAKE_SHARED_LINKER_FLAGS "/MANIFEST:NO")
-endif()
 
 target_include_directories(
-	${PROJECT_NAME} PRIVATE
-    .
+    ${PROJECT_NAME} PRIVATE
+    ${CMAKE_SOURCE_DIR}
 )
 
-set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build." FORCE)
-
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 23)
+if(WIN32)
+    set(MY_MANIFEST_FILE ./resource/windows/application.manifest)
+    set(CMAKE_SHARED_LINKER_FLAGS "/MANIFEST:NO")
+    target_compile_definitions(${PROJECT_NAME} PRIVATE UNICODE _UNICODE)
+    add_compile_options(/w) 
 endif()
+
+if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
+    target_compile_options(${PROJECT_NAME} PRIVATE
+        -Weverything
+        -Wno-c++98-compat
+        -Wno-c++98-compat-pedantic
+        -Wno-pre-c++14-compat
+        -Wno-pre-c++17-compat
+        -Wno-c++20-compat
+        -Wno-c99-extensions
+        -Wno-padded
+        -Wno-redundant-parens
+        -Wno-missing-field-initializers
+        -Wno-unused-parameter
+        -Wno-unused-variable
+        -Wno-unused-local-typedef
+        -Wno-missing-noreturn
+        -Wno-gnu-zero-variadic-macro-arguments
+        -Wno-ctad-maybe-unsupported
+        -Wno-global-constructors
+        -Wno-exit-time-destructors
+        -Wno-weak-vtables
+        -Wno-self-assign
+        -Wno-switch-enum
+        -Wno-switch-default
+        -Wno-covered-switch-default
+        -Wno-shadow-field
+        -Wno-shadow-field-in-constructor
+        -Wno-shadow-uncaptured-local
+        -Wno-unsafe-buffer-usage
+        -Wno-gnu-line-marker
+        -Wno-disabled-macro-expansion
+        -Wno-language-extension-token
+        -Wno-shadow
+        -Wno-float-equal
+        -Wno-deprecated-declarations
+        -Wno-dollar-in-identifier-extension
+        -Wno-reserved-user-defined-literal
+        -Wno-unreachable-code-return
+        -Wno-unreachable-code-break
+    )
+endif()
+
+set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "Launcher" RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
+
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS ON)
+set(CMAKE_C_STANDARD 17)
+set(CMAKE_C_STANDARD_REQUIRED ON)
 
 if (MSVC)
-  target_link_libraries(${PROJECT_NAME} PRIVATE Kernel32)
+    target_compile_options(${PROJECT_NAME} PRIVATE /std:c++latest)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC _WIN32_WINNT=0x0A00)
+    target_link_libraries(${PROJECT_NAME} PRIVATE Kernel32)
 endif()
 
-if(WIN32)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE UNICODE _UNICODE)
+if (MSVC)
+    target_link_libraries(${PROJECT_NAME} PRIVATE Ole32 User32)
 endif()
+
+if (MSVC)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE UNICODE _UNICODE)
+    target_link_libraries(${PROJECT_NAME} PRIVATE Ole32 User32 Kernel32)
+    set_property(TARGET ${PROJECT_NAME} PROPERTY WIN32_EXECUTABLE OFF)
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:CONSOLE /ENTRY:wmainCRTStartup")
+endif()
+
+
