--- a/Modding/pubspec.yaml
+++ b/Modding/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
     bloc: ^8.1.4
     meta: ^1.15.0
     flutter_acrylic: ^1.1.4
+    loading_indicator: ^3.1.1
 dev_dependencies:
     flutter_test:
         sdk: flutter
