--- a/Modding/pubspec.yaml
+++ b/Modding/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
     meta: ^1.15.0
     flutter_acrylic: ^1.1.4
     loading_indicator: ^3.1.1
+    screenshot: ^3.0.0
 dev_dependencies:
     flutter_test:
         sdk: flutter
