--- a/Kernel/dependencies/SHA256/CMakeLists.txt
+++ b/Kernel/dependencies/SHA256/CMakeLists.txt
@@ -22,3 +22,5 @@ endif ()
 if (UNIX AND NOT APPLE)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 endif()
+
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
