--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -47,6 +47,7 @@ add_subdirectory("./dependencies/magic_enum")
 add_subdirectory("./dependencies/canvas_ity")
 add_subdirectory("./dependencies/tsl")
 add_subdirectory("./dependencies/compile-time-regular-expressions")
+add_subdirectory("./dependencies/stringzilla")
 
 if (MSVC)
   add_subdirectory("./dependencies/dirent")
