--- a/.gitignore
+++ b/.gitignore
@@ -443,3 +443,4 @@ Documentation
 KernelX
 Modding/android/app/src/main/jniLibs/arm64-v8a/libKernel.so
 Modding/android/app/src/main/jniLibs/arm64-v8a/libKernel.so
+Kernel/cmake-build-debug/
