--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -48,6 +48,8 @@ add_subdirectory("./dependencies/canvas_ity")
 add_subdirectory("./dependencies/tsl")
 add_subdirectory("./dependencies/compile-time-regular-expressions")
 add_subdirectory("./dependencies/parallel-hashmap")
+add_subdirectory("./dependencies/mio")
+add_subdirectory("./dependencies/thread-pool")
 
 if (MSVC)
   add_subdirectory("./dependencies/dirent")
