--- a/Kernel/kernel/CMakeLists.txt
+++ b/Kernel/kernel/CMakeLists.txt
@@ -87,6 +87,8 @@ add_library(
 	./dependencies/tsl.hpp
 	./dependencies/compile-time-regular-expressions.hpp
 	./dependencies/parallel-hashmap.hpp
+	./dependencies/mio.hpp
+	./dependencies/thread-pool.hpp
 
 	./support/popcap/animation/common.hpp
 	./support/popcap/animation/decode.hpp
@@ -278,6 +280,8 @@ target_link_libraries(
 	tsl
 	compile-time-regular-expressions
 	parallel-hashmap
+	mio
+	thread-pool
 )
 
 if (WIN32)
