--- a/Shell/Cargo.toml
+++ b/Shell/Cargo.toml
@@ -10,3 +10,7 @@ libc = "0.2.169"
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = {version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_Globalization", "Win32_System_Services", "Wdk", "Wdk_System_SystemServices"]}
+
+[target.'cfg(windows)'.build]
+target = "x86_64-pc-windows-msvc"
+
