--- a/Shell/meson.build
+++ b/Shell/meson.build
@@ -1,6 +1,15 @@
-project('Shell', 'rust',
-        version : '0.1', meson_version: '>=1.3.0',
-        default_options : ['rust_std=2021', 'warning_level=3']
+project(
+    'Shell', 
+    languages : ['rust', 'cpp'],
+    version : '0.1', 
+    meson_version: '>=1.3.0',
+    default_options : 
+    [
+        'rust_std=2021', 
+        'warning_level=3',
+        'buildtype=release',   
+        'optimization=3',
+    ],
 )
 
 rust = import('rust')
